src/test/ui/generic/generic-impl-less-params-with-defaults.stderr
error[E0243]: wrong number of type arguments: expected at least 2, found 1
  --> $DIR/generic-impl-less-params-with-defaults.rs:21:5
   |
LL |     Foo::<isize>::new();
   |     ^^^^^^^^^^^^^^^^^ expected at least 2 type arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0243`.
